infra/k8s/overlays/production-base/patch-minio-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: sega
spec:
  template:
    spec:
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data-pvc
