infra/k8s/overlays/production-base/patch-prometheus-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: sega
spec:
  template:
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: prometheus-data-pvc
