infra/k8s/overlays/production-base/patch-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sega-ingress
  namespace: sega
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - app.sega.local
      secretName: sega-app-tls
